--- a/src/index.css
+++ b/src/index.css
@@ -274,7 +274,7 @@ strong {
     padding: 0;
     box-sizing: border-box;
     /* width: 200%; */
-    width: max-content;
+    width: 100%;
   }
   .nav-cont ul {
     display: none;
@@ -312,8 +312,9 @@ strong {
   }
   .img-disp {
     /* background-size: cover; */
-    width: 95%;
-    height: 550px;
+    margin-left: 50px;
+    width: 110%;
+    height: 590px;
     border-radius: 0;
   }
   .imgs {
