--- a/src/index.css
+++ b/src/index.css
@@ -270,11 +270,11 @@ strong {
 
 @media screen and (max-width: 600px) {
   .container {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
     /* width: 200%; */
-    width: max-content;
+    width: 375px;
   }
   .nav-cont ul {
     display: none;
