--- a/src/index.css
+++ b/src/index.css
@@ -190,11 +190,11 @@ strong {
 
 /* Main Image */
 .img-disp {
-  width: 310px;
+  /* width: 310px;
   height: 330px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s;
+  transition: transform 0.3s; */
 }
 
 /* Thumbnails */
@@ -315,9 +315,8 @@ strong {
     height: 45px;
   }
   .img-disp {
-    /* background-size: cover; */
-    /* margin-left: 10px; */
-    /* width: 100%; */
+    margin-left: 10px;
+    width: 100%;
     height: 590px;
     border-radius: 0;
   }
