--- a/src/index.css
+++ b/src/index.css
@@ -269,7 +269,7 @@ strong {
 /* //Responsiveness */
 
 @media screen and (max-width: 600px) {
-  .container {
+  body {
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
@@ -277,20 +277,20 @@ strong {
     width: 375px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
   }
   .nav-cont ul {
     display: none;
   }
   .nav-cont {
-    padding: 20px;
-    max-width: 100%;
+    padding: 0px 20px 0 20px;
+    /* max-width: 100%; */
     display: flex;
-    gap: 100px;
+    gap: 50px;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
   }
 
   .menu {
@@ -303,6 +303,7 @@ strong {
     display: flex;
     flex-direction: column;
     width: 200vw;
+    margin-left: -25px;
     /* width: 100vw; */
   }
   .sneakers {
@@ -315,7 +316,7 @@ strong {
     height: 45px;
   }
   .img-disp {
-    margin-left: 10px;
+    /* margin-left: 10px; */
     width: 100%;
     height: 590px;
     border-radius: 0;
