--- a/src/index.css
+++ b/src/index.css
@@ -269,11 +269,12 @@ strong {
 /* //Responsiveness */
 
 @media screen and (max-width: 600px) {
-  body {
+  .container {
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
-    /* width: 200%; */
+    max-width: 100%;
+    width: 90%;
     width: 375px;
     display: flex;
     flex-direction: column;
