--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
   margin: 0 auto;
 }
 p {
-  font-size: 16px;
+  /* font-size: 16px; */
 }
 .sub-container {
   margin: 0 auto;
@@ -269,13 +269,18 @@ strong {
 /* //Responsiveness */
 
 @media screen and (max-width: 600px) {
+  body,
+  html {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
   .container {
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
     max-width: 100%;
-    width: 90%;
     width: 375px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     /* align-items: center; */
@@ -284,12 +289,19 @@ strong {
   .nav-cont ul {
     display: none;
   }
+  .nav-imgs {
+    margin-left: -10px;
+    display: flex;
+    gap: 10px;
+  }
   .nav-cont {
-    padding: 0px 20px 0 20px;
+    margin: 10px 0 10px 0;
+    padding: 0px 0px 0 10px;
+    border-bottom: none;
     /* max-width: 100%; */
     display: flex;
-    gap: 50px;
-    justify-content: space-between;
+    gap: 0px;
+    /* justify-content: space-between; */
     align-items: center;
     /* width: 100%; */
   }
@@ -303,62 +315,60 @@ strong {
     margin-top: 0;
     display: flex;
     flex-direction: column;
-    width: 200vw;
-    margin-left: -25px;
+    width: 100%;
+    margin-left: 0;
     /* width: 100vw; */
   }
   .sneakers {
-    width: 280px;
-    height: 41px;
-    margin-left: -30px;
+    width: 100px;
+    height: 35px;
+    margin-left: -40px;
   }
   .nav-right-img {
-    width: 45px;
-    height: 45px;
+    width: 20px;
+    height: 20px;
   }
   .img-disp {
     /* margin-left: 10px; */
     width: 100%;
-    height: 590px;
+    height: 300px;
     border-radius: 0;
   }
   .imgs {
     display: none;
   }
   .text-cont {
-    padding: 0 20px 0 40px;
+    padding: 0 15px 0 15px;
   }
   .text-cont h5 {
-    font-size: 20px;
+    /* font-size: 20px; */
     letter-spacing: 5px;
   }
-  .text-cont h1 {
-    font-size: 55px;
-  }
+
   .text-cont > p {
-    font-size: 30px;
+    font-size: 16px;
     /* max-width: 100%; */
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     /* word-spacing: 2px; */
-    line-height: 45px;
+    line-height: 30px;
   }
   .price-h {
-    gap: 50px;
+    gap: 10px;
   }
   .price-h > h2 {
-    font-size: 50px;
+    /* font-size: 50px; */
     letter-spacing: 2px;
   }
   .price-h p {
-    font-size: 30px;
+    /* font-size: 30px; */
   }
   .up-price-h {
     display: flex;
     justify-content: space-between;
-    padding: 20px 20px 20px 0;
+    padding: 0px 20px 5px 0;
   }
   .up-price-h > p {
-    font-size: 40px;
+    font-size: 25px;
     font-weight: 600;
   }
   .btns-section {
@@ -366,21 +376,21 @@ strong {
     flex-direction: column;
   }
   .btns {
-    height: 90px;
+    height: 50px;
     display: flex;
     justify-content: space-between;
-    font-size: 40px;
+    /* font-size: 40px; */
     font-weight: bold;
     padding: 0 30px 0 30px;
   }
   .step {
-    width: 30px;
+    width: 20px;
   }
   .btns-section button {
     width: 100%;
-    height: 90px;
-    margin: 15px 0 40px 0;
-    font-size: 25px;
+    height: 50px;
+    margin: 5px 0 40px 0;
+    /* font-size: 25px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -394,13 +404,9 @@ strong {
   }
   .cart-card {
     position: absolute;
-    top: 120px; /* below the navbar */
-    right: -370px;
-    width: 200%;
-    background: white;
-    padding: 16px;
-    border-radius: 8px;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-    z-index: 50;
+    top: 120px;
+    right: 10px; /* keep it inside the screen */
+    width: 90%; /* or a fixed px width like 300px */
+    max-width: 350px;
   }
 }
