--- a/src/index.css
+++ b/src/index.css
@@ -333,6 +333,7 @@ strong {
     width: 100%;
     height: 300px;
     border-radius: 0;
+    object-fit: cover;
   }
   .imgs {
     display: none;
