--- a/src/index.css
+++ b/src/index.css
@@ -266,6 +266,10 @@ strong {
   height: 30px;
 }
 
+.nav-btns {
+  display: none;
+}
+
 /* //Responsiveness */
 
 @media screen and (max-width: 600px) {
